// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ServiceStateChip should match snapshot with deployment status 1`] = `
<div>
  <div
    class=""
    data-state="closed"
  >
    <div
      class="relative flex h-4 w-4 items-center justify-center text-brand-500 dark:text-brand-300"
    >
      <div
        class="absolute left-0 top-0 h-full w-full animate-spin rounded-full border-[1.5px] border-current border-r-transparent"
      />
      <div
        class="p-1"
      >
        <svg
          fill="none"
          height="100%"
          viewBox="0 0 14 14"
          width="100%"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M5.48333 1.18209L4.27778 1.91116L6.61111 3.0855V4.25984L9.33333 6.99997L9.91667 6.4128L10.5 6.99997L9.91667 7.58714L11.0833 8.76149L14 5.82563L12.8333 4.65129L12.25 5.23846L11.6667 4.65129L12.25 4.06412L9.8559 1.65427C9.27257 1.0671 8.48021 0.736816 7.65625 0.736816H7.08507C6.52118 0.736816 5.96701 0.890949 5.48333 1.18209ZM0 10.9144L2.33333 13.2631L8.03785 6.80425L6.41667 5.1724L0 10.9144Z"
            fill="currentColor"
          />
        </svg>
      </div>
    </div>
  </div>
</div>
`;

exports[`ServiceStateChip should match snapshot with running status 1`] = `
<div>
  <div
    class=""
    data-state="closed"
  >
    <div
      class="relative flex h-4 w-4 items-center justify-center text-brand-500 dark:text-brand-300"
    >
      <div
        class="absolute left-0 top-0 h-full w-full animate-spin rounded-full border-[1.5px] border-current border-r-transparent"
      />
      <div
        class="p-1"
      >
        <svg
          class="relative left-[1px] mx-auto scale-75"
          fill="none"
          height="100%"
          viewBox="0 0 8 10"
          width="100%"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M8 5l-8 5V0l8 5z"
            fill="currentColor"
          />
        </svg>
      </div>
    </div>
  </div>
</div>
`;
